--- a/package.json
+++ b/package.json
@@ -84,6 +84,7 @@
         "semver": "^5.3.0",
         "shelljs": "^0.7.6",
         "uglifyjs-webpack-plugin": "^1.1.1",
+        "vue-awesome-swiper": "^3.1.3",
         "vue-head": "^2.1.1",
         "url-loader": "^0.5.8",
         "vue-jest": "^1.0.2",
