feat: modify npm run dev equal npm run dev:e2e

--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
     "author": "DDT_FullStack",
     "private": true,
     "scripts": {
-        "dev": "webpack-dev-server --inline --progress --config build/webpack.dev.conf.js",
+        "dev": "webpack-dev-server --inline --progress --define process.jsonSserver=true --config build/webpack.dev.conf.js",
         "dev:e2e": "webpack-dev-server --inline --progress --define process.jsonSserver=true --config build/webpack.dev.conf.js",
         "dev:ut": "webpack-dev-server --inline --progress --define process.air190=true --config build/webpack.dev.conf.js",
         "start": "npm run dev",
